--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -35,7 +35,7 @@ const socials = [
     icon: "linkedin",
   },
   {
-    label: "X (Twitter)",
+    label: "Twitter",
     details: "@boogerbuttcheek",
     href: "https://twitter.com/boogerbuttcheek",
     icon: "twitter",
