remove frame-motion, add treelink, add cta for treelink on index top bar

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,9 +24,9 @@ const pageTitle = "Trevor Tyler Lee";
     <h2 class="pb-4 pt-12 text-lg font-medium text-textVariant">Projects</h2>
     <ul class="">
       <Project
-        description="Templates built with Astro + Tailwind CSS."
-        href="https://superwebthemes.com/"
-        title="SuperWeb Themes 🆕"
+        description="Free, open source Linktree alternative."
+        href="https://treelink.app"
+        title="Treelink 🌲"
       />
       <Project
         description="Blog theme for Astro with search, comments, and zero frameworks."
